--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.ml-agents": "2.0.1",
+    "com.unity.ml-agents.extensions": "file:/Users/daboi/Documents/Unity /Learn/babar/ml-agents/com.unity.ml-agents.extensions",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
